--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #ffffff;
+  min-height: 100vh;
+  background-image: url("../images/background.jpg");
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 a {
