--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
   font-family: "Roboto Mono", sans-serif;
   color: #ffffff;
   min-height: 100vh;
-  background-image: url("../images/background.jpg");
+  background-image: url("../public/images/background.jpg");
   background-repeat: repeat;
   background-size: cover;
 }
